--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Posts</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Title</th>
@@ -32,4 +32,3 @@
 
 <br>
 <p>Actualmente hay <%=Post.count%> posts activos</p>
- 
